[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merchants"
version = "2026.2.2"
description = "Framework-agnostic hosted-checkout payment SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "requests>=2.28"]

[project.optional-dependencies]
flow = ["pyflowcl>=2024.1"]
khipu = ["khipu-tools>=2024.1"]
cli = ["typer>=0.9"]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
    "responses>=0.25",
    "typer>=0.9",
    "pre-commit",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
merchants = "merchants.cli:app"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
