[project]
name = "merchants-sdk"
version = "2026.2.4"
description = "Framework-agnostic hosted-checkout payment SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "requests>=2.28"]

[project.optional-dependencies]
flow = ["pyflowcl>=2024.1"]
khipu = ["khipu-tools>=2024.1"]
cli = ["typer>=0.9"]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
    "responses>=0.25",
    "typer>=0.9",
    "pre-commit",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.poetry]
packages = [{ include = "merchants" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
merchants = "merchants.cli:app"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
